--- a/frontend/src/app/signup/signup.component.html
+++ b/frontend/src/app/signup/signup.component.html
@@ -1,45 +1,59 @@
-<form #signupForm="ngForm" (ngSubmit)="signupUser(signupForm)">
-    <label for="username">Username: </label>
-    <input type="text" name="username" id="username" ngModel>
-    <br>
+<mat-grid-list cols="1" rowHeight="90%">
+    <mat-grid-tile>
+        <mat-card class="card-login">
+            <mat-card-content>
+                <form #signupForm="ngForm" (ngSubmit)="signupUser(signupForm)">
+                    <mat-form-field class="example-full-width">
+                        <mat-label> Username: </mat-label>
+                        <input matInput type="text" name="username" id="username" ngModel>
+                        <br>
+                    </mat-form-field>
 
-    <label for="email">Email: </label>
-    <input type="text" name="email" id="email" ngModel>
-    <br>
+                    <mat-form-field class="example-full-width">
+                        <mat-label> Email: </mat-label>
+                        <input matInput type="text" name="email" id="email" ngModel>
+                    </mat-form-field>
 
-    <label for="password">Password: </label>
-    <input type="password" name="password" id="password" ngModel>
-    <br>
+                    <mat-form-field class="example-full-width">
+                        <mat-label> for="password">Password: </mat-label>
+                        <input matInput type="password" name="password" id="password" ngModel>
+                    </mat-form-field>
 
-    <label for="age">Age: </label>
-    <input type="number" name="age" id="age" ngModel>
-    <br>
+                    <mat-form-field class="example-full-width">
+                        <mat-label>Age: </mat-label>
+                        <input matInput type="number" name="age" id="age" ngModel>
+                    </mat-form-field>
 
-    <label for="weight">Weight (KG): </label>
-    <input type="number" name="weight" id="weight" ngModel>
-    <br>
+                    <mat-form-field class="example-full-width">
+                        <mat-label> Weight (KG): </mat-label>
+                        <input matInput type="number" name="weight" id="weight" ngModel>
+                    </mat-form-field>
 
-    <label for="height">Height (cm): </label>
-    <input type="number" name="height" id="height" ngModel>
-    <br>
+                    <mat-form-field class="example-full-width">
 
-    <label for="gender">Gender: </label>
-    <select name="gender" id="gender" ngModel>
-        <option value="male"> Male </option>
-        <option value="female"> Female </option>
-    </select>
-    <br>
+                        <mat-label> Height (cm): </mat-label>
+                        <input matInput type="number" name="height" id="height" ngModel>
+                    </mat-form-field>
 
-    <label for="diet"> Preference: </label>
-    <select name="diet" id="diet" ngModel>
-        <option value="vegetarian"> Vegetarian </option>
-        <option value="non-vegetarian"> Non Vegetarian </option>
-    </select>
-    <br>
-	<!-- "dietary_preference": "vegetarian" -->
+                    <mat-label> Gender: </mat-label>
+                    <select matInput name="gender" id="gender" ngModel>
+                        <option value="male"> Male </option>
+                        <option value="female"> Female </option>
+                    </select>
+                    <mat-label>Preference: </mat-label>
+                    <select matInput name="diet" id="diet" ngModel>
+                        <option value="vegetarian"> Vegetarian </option>
+                        <option value="non-vegetarian"> Non Vegetarian </option>
+                    </select>
 
-    <button type="submit">SignUp</button>
-</form>
+                    <br>
+                    <br>
+                    <button mat-raised-button type="submit">SignUp</button>
+                    
+                    <button style="float: right" mat-raised-button (click)="onSignin()"> Signin </button>
+                </form>
 
-<br><br>
-<button (click)="onSignin()"> Signin </button> 
+            </mat-card-content>
+        </mat-card>
+    </mat-grid-tile>
+</mat-grid-list>
